# aws-nitro-enclaves-nsm-api

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  libnsm.pc.in
.github/workflows/: ci.yml
Dockerfiles/: Dockerfile.1.41  Dockerfile.build  Dockerfile.nightly  Dockerfile.stable  Dockerfile.test
docs/: attestation_process.md
nsm-driver/: Cargo.toml
nsm-driver/src/: lib.rs
nsm-io/: Cargo.toml
nsm-io/src/: lib.rs
nsm-lib/: Cargo.toml  build.rs  cbindgen.toml
nsm-lib/src/: lib.rs
nsm-test/: Cargo.toml  Makefile  README.md
nsm-test/src/: main.cc
scripts/: run_test.sh
src/: lib.rs
src/api/: mod.rs
src/driver/: mod.rs
src/nsm-lib/: build.rs  nsm-lib.h
src/nsm-lib/src/: lib.rs
