[package]
name = "nsm-driver"
version = "0.2.0"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20"
libc = "0.2"
log = "0.4"
serde_cbor = "0.11"
nsm-io = { path = "../nsm-io" }
