[package]
name = "nsm-lib"
version = "0.1.0"
authors = ["Andrei Trandafir <aatrand@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
nsm-io = { path = "../nsm-io" }
nsm-driver = { path = "../nsm-driver" }
serde_bytes = "0.11"

[build-dependencies]
cbindgen = { version = "0.15", default-features = false }

[lib]
name = "nsm"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]
