[package]
name = "nsm-lib"
version = "0.2.1"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
aws-nitro-enclaves-nsm-api = { path = "../" }

[build-dependencies]
cbindgen = { version = "0.21", default-features = false }

[lib]
name = "nsm"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]
