[package]
name = "nsm-test"
version = "0.1.0"
authors = ["Andrei Trandafir <aatrand@amazon.com>"]
edition = "2018"

[features]
config_emulated = []

[dependencies]
serde_bytes = "0.11"
serde_cbor = "0.11"
nsm-io = { path = "../nsm-io" }
nsm-driver = { path = "../nsm-driver" }
nsm-lib = { path = "../nsm-lib" }
nix = "0.22"
threadpool = "1.7"
signal-hook = "=0.1.8"
vsock = "0.2"
