[package]
name = "nsm-test"
version = "0.2.1"
authors = ["The AWS Nitro Enclaves Team <aws-nitro-enclaves-devel@amazon.com>"]
edition = "2018"

[features]
config_emulated = []

[dependencies]
aws-nitro-enclaves-nsm-api = { path = "../" }
nsm-lib = { path = "../nsm-lib" }
nix = "0.20"
threadpool = "1.7"
signal-hook = "=0.1.8"
vsock = "0.2"
